tests/expectations/compiler/integers/u128/min_fail.out
DCE_ENABLED:
Error [ETYC0372008]: The value -1 is not a valid `u128`
    --> compiler-test:4:23
     |
   4 |         let a: u128 = -1u128;
     |                       ^^^^^^
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:2:9
     |
   2 | program test.aleo {
     |         ^^^^^^^^^

DCE_DISABLED:
Error [ETYC0372008]: The value -1 is not a valid `u128`
    --> compiler-test:4:23
     |
   4 |         let a: u128 = -1u128;
     |                       ^^^^^^
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:2:9
     |
   2 | program test.aleo {
     |         ^^^^^^^^^
